<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".spell_card">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/spellName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/spell_name"
                android:textAllCaps="false"
                android:textColor="#94353B"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle"
                android:textStyle="italic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cast_time_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/castTimeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cast_time_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/rangeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/range_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rangeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range_value" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/componentsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/components_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/componentsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/components_value" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/durationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/durationValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration_value" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <Button
        android:id="@+id/list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>